# hpp-gui

./: .git-blame-ignore-revs  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  NEWS  README.md  default.nix  flake.nix  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  osgwidget.cc  osgwidget.h  package.xml
.github/workflows/: nix.yml  update-flake-lock.yml
.travis/: build
doc/: Doxyfile.extra.in
etc/gepetto-gui/: basic.conf  settings.conf
hpp-qt/: corbaserver.cc  corbaserver.hh
include/hpp/gui/: attitude-device.h  bodytreewidget.hh  color-map.h  color-map.hh  config-dep.hh.in  config-python.hh.in  configurationlistwidget.h  fwd.h  fwd.hh  ledindicator.h  ledindicator.hh  mainwindow.h  mainwindow.hh  meta.hh  osgwidget.h  osgwidget.hh  pathplayer.h  pick-handler.hh  plugin-interface.h  plugin-interface.hh  pythonwidget.hh  safeapplication.h  safeapplication.hh  settings.hh  solverwidget.h  tree-item.h  tree-item.hh  windows-manager.h  windows-manager.hh
include/hpp/gui/dialog/: dialogloadenvironment.h  dialogloadenvironment.hh  dialogloadrobot.h  dialogloadrobot.hh  pluginmanagerdialog.h  pluginmanagerdialog.hh
include/hpp/gui/omniorb/: omniorbthread.h  omniorbthread.hh  url.hh
include/hpp/gui/ui/: dialogloadenvironment.ui  dialogloadrobot.ui  mainwindow.ui  pluginmanagerdialog.ui
plugins/: CMakeLists.txt
plugins/coal/: CMakeLists.txt  node.cc  node.hh  plugin.cc  plugin.hh
plugins/hppcorbaserverplugin/: CMakeLists.txt  hppcorbaserverplugin.cc  hppcorbaserverplugin.hh  hppserverprocess.cc  hppserverprocess.hh
plugins/hppfcl/: CMakeLists.txt  node.cc  node.hh  plugin.cc  plugin.hh
plugins/hppmanipulationwidgetsplugin/: CMakeLists.txt  hppmanipulationwidgetsplugin.cc  hppmanipulationwidgetsplugin.hh  linkwidget.cc  linkwidget.hh  linkwidget.ui  manipulationconstraintwidget.cc  manipulationconstraintwidget.hh  manipulationlockedjoint.cc  manipulationlockedjoint.hh  manipulationncpicker.cc  manipulationncpicker.hh  roadmap.cc  roadmap.hh
plugins/hppwidgetsplugin/: CMakeLists.txt  configurationlist.cc  configurationlist.hh  configurationlistwidget.cc  configurationlistwidget.h  configurationlistwidget.hh  configurationlistwidget.ui  constraintwidget.cc  constraintwidget.hh  constraintwidget.ui  conversions.hh  demoloadersubwidget.cc  demoloadersubwidget.hh  demosubwidget.cc  demosubwidget.hh  hppwidgetsplugin.cc  hppwidgetsplugin.hh  iconstraint.cc  iconstraint.hh  joint-action.cc  joint-action.hh  joint-tree-item.cc  joint-tree-item.h  joint-tree-item.hh  jointbounddialog.cc  jointbounddialog.h  jointbounddialog.hh  jointmovewidget.cc  jointmovewidget.hh  jointtreewidget.cc  jointtreewidget.h  jointtreewidget.hh  jointtreewidget.ui  listjointconstraint.cc  listjointconstraint.hh  numericalconstraintpicker.cc  numericalconstraintpicker.hh  numericalconstraintpicker.ui  pathplayer.cc  pathplayer.h  (+19 more)
plugins/plugintest/: CMakeLists.txt  test.cc  test.hh
plugins/remoteimuplugin/: CMakeLists.txt  remoteimuplugin.cc  remoteimuplugin.hh
pyplugins/: CMakeLists.txt  direct-path.py
pyplugins/hpp/: __init__.py
pyplugins/hpp/gui/: collision_pairs.py  directpath.py  dynamicbuild.py  findGrasp.py  graphutility.py  inspector.py  parameters.py  plugin.py
res/: images.qrc
scripts/: default.py
src/: CMakeLists.txt  attitude-device.cc  bodytreewidget.cc  configurationlistwidget.cc  hpp-gui.in  ledindicator.cc  main.cc  main.cc.in  mainwindow.cc  omniorbthread.cc  osgwidget.cc  pathplayer.cc  pick-handler.cc  pythonwidget.cc  safeapplication.cc  settings.cc  solverwidget.cc  tree-item.cc  windows-manager.cc
src/dialog/: dialogloadenvironment.cc  dialogloadrobot.cc  pluginmanagerdialog.cc
src/hpp-qt/: corbaserver.cc
tests/: CMakeLists.txt  colormap.cc
