<?xml version='1.0'?>
<package format='2'>
 <name>hpp-gui</name>
 <version>6.0.0</version>
 <description>'Graphical interface for HPP ' </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-gui </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>gepetto-viewer</depend>
 <depend>gepetto-viewer-corba</depend>

 <depend>coal</depend>
 <depend>hpp-corbaserver</depend>
 <depend>hpp-manipulation-corba</depend>
</package>
