<?xml version="1.0"?>
<package format="3">
  <name>hpp-gui</name>
  <version>6.0.0</version>
  <description>'Graphical interface for HPP ' </description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <author>Joseph Mirabel</author>
  <author>Florent Lamiraux et al.</author>

  <license>BSD-2</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-gui</url>
  <url type="repository">https://github.com/humanoid-path-planner/hpp-gui</url>
  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-gui/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>doxygen</build_depend>

  <depend>coal</depend>
  <depend>gepetto-viewer</depend>
  <depend>gepetto-viewer-corba</depend>
  <depend>hpp-corbaserver</depend>
  <depend>hpp-manipulation-corba</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>